
[project]
name = "tripbuddy"
version = "0.1.0"
description = "Telegram bot for trip management"
requires-python = ">=3.11"

dependencies = [
    "Flask==3.0.3",
    "pyTelegramBotAPI==4.28.0",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
# uv — менеджер зависимостей, который использует Replit
